Bug 1120084: Implement MSE's AppendErrorAlgorithm