dom/media/mediasource/TrackBuffer.cpp
@@ -611,6 +611,12 @@ TrackBuffer::ResetDecode()
   }
 }
 
+void
+TrackBuffer::ResetParserState()
+{
+  // TODO
+}
+
 const nsTArray<nsRefPtr<SourceBufferDecoder>>&
 TrackBuffer::Decoders()
 {
